--- a/en/debugger.html
+++ b/en/debugger.html
@@ -160,6 +160,22 @@ Watches used to evaluate variable or expression and their values can be realtime
 
 <a name="whyc"></a><br>
 <h2>About the C programming language</h2>
+<p>Common pitfalls of C programming:<br>
+<ul><li>Unfreed memory</li>
+<li>Memory leak</li>
+<li>Infinity loop</li>
+<li>Unclosed file handle</li>
+<li>Exceeded array border access</li>
+<li>NULL pointer</li>
+<li>Invalid void pointer casting</li>
+<li>Uninitialized variables</li>
+<li>Uncaptured error handling</li>
+<li>Not validating user input</li>
+<li>...</li>
+</ul></p>
+
+<p><i><gr>First known how to write close and free and then try open and alloc, ensure clean first and then do something is the philosophy and bits of C programming, this rule also suitable to other languages.</gr></i></p>
+
 <p>C is not safe but it is the strongest programming language and the most strongest softwares were written with it, including operation system and the most important infrastructure of internet and software industry, think about BIND, Apache, Nginx, MySQL, PostgreSQL, SQLite, Berkeley DB, Redis, Memcached, PHP, Perl, Ruby, Python, Lua, Git, FFmpeg and other countless excellent softwares. If sqlite and git were written with C++ or Java, I'll throw them away immediately. C is top professionals' language, most developer have never written a real C software in their life, a mature developer may needs ten years to really write software with it. The product quality of the software industry is directly proportional to the number of experienced C programming experts.</p>
 
 
