--- a/en/powerreader.html
+++ b/en/powerreader.html
@@ -64,11 +64,6 @@
 <li> Automatically generate thumbnail for image and video, and different icon for different file types, e.g. pdf, office documents, audio, web files and dozens of types of source code files.</li>
 </ul>
 
-
-<h2>About Apple App Store</h2>
-<p><b class="warning">Note: </b> One thing you must know is, they do very bad things on Apple App Store, these gentlemen leaves bad comments on some good app's rate and comment to mislead people, so please judge one app's value by yourself instead of what they said.</p>
-
-
 <h2>Read &amp; Review code on iPad</h2>
 <p class="hilight">This function was especially designed for anyone who wants to read or edit source code on iOS device.</p>
 <ul>
@@ -102,7 +97,7 @@
 <h2>Screenshots</h2>
 <div class="screenshots__">
 <p><a href="../images/editor/405.png" target="_blank"><img src="../images/editor/405.png" class="screenshots"></a></p>
-<p class="smallsection">Universal Finder-like file manager for iOS device. Fast file transfer between iOS device and Mac, Windows PC, Linux, Android phone and other platforms. You can select and apply operations on any folder and file one by one and conveniently compare files between local folder and remote folder.</p>
+<p class="smallsection">Universal Finder-like file manager for iOS device. Fast file transfer between iOS device and Mac, Windows PC, Linux, Android phone and other platforms. <gr>You can select and apply operations on any folder and file one by one and conveniently compare files between local folder and remote folder.</gr></p>
 <p><a href="../images/editor/400.png" target="_blank"><img src="../images/editor/400.png" class="screenshots"></a></p>
 <p class="smallsection">Home panel provides entries to manage local storage on iOS device and remote files on FTP server that running on Mac, Windows, Linux, Unix, Android, Game box and others.</p>
 <p><a href="../images/editor/401.png" target="_blank"><img src="../images/editor/401.png" class="screenshots"></a></p>
@@ -116,6 +111,10 @@
 </div>
 <p><span class="note">New </span>&nbsp;&nbsp; The builtin music player in the last updated version support playlist management, cycle loop and random playback, the player can synchronise lyrics sheet with music file. You just needs to put the lyrics sheet that has a .lrc extension together with the music file, i.e. the mp3 file and the .lrc file both must be under the same folder and has a same file name. <span><a href="http://www.sevenuc.com/en/lyricsmaker.html" target="_blank"><img src="../images/lyricsmaker/logo.png" class="smallicon" /></a></span><a href="http://www.sevenuc.com/en/lyricsmaker.html" target="_blank">LyricsMaker</a> is a small util that designed to help making lyrics sheet for music very easy.</p>
 <p><br></p>
+
+
+<h2>About Apple App Store</h2>
+<p><b class="warning">Note: </b> There's "gentleman" write some "good" review words on App Store about this app to mislead people, but I believe people can judge what they said by themselves.</p>
 
 <p>Download the wonderful app from App Store: <br><br><a class="appstore_download_link" href="https://itunes.apple.com/us/app/icodeeditor/id579257935?mt=8"></a><br><br></p>
 <p><br><br></p>
