--- a/en/terms.html
+++ b/en/terms.html
@@ -46,7 +46,7 @@
 <div id="footer_wrap" class="outer">
  <footer class="inner">
    <a href="http://sevenuc.com"><img src="http://sevenuc.com/images/logo.svg" class="logo"></a><span><p class="copyright">
-   <span class="copyright"> © 2020 Sevenuc Consulting <br>All rights reserved.</span>
+   <span class="copyright"> © 2006-2020 Sevenuc Consulting <br>All rights reserved.</span>
       <a href="http://sevenuc.com/en/about.html"> About </a>|
       <a href="http://sevenuc.com/en/service.html"> Services </a>|
       <a href="http://sevenuc.com/en/apps.html"> Apps </a>|
