--- a/en/powerreader.html
+++ b/en/powerreader.html
@@ -79,7 +79,7 @@
 <h2>FTP Server Settings</h2>
 <p><strong>1. On Macintosh:</strong> System Preferences → Sharing → File Sharing, check the service and got the IP address of your machine, then you can input it in the settings of iPowerReader.<br><br><a href="../images/editor/ftp.png" target="_blank"><img src="../images/editor/ftp.png" alt="" class="screenshots"/></a><br><br>
 <a href="uftp.html"><img src="../images/uftp/logo.png" alt="" style="width:32px;height:auto;vertical-align: -1ex;"/></a>Because macOS High Sierra removed the builtin FTP Server, there's an alternative solution: 
-<a href="http://www.sevenuc.com/en/uftp.html">Personal FTP Server</a>, use the uFTP Server, your FTP settings of iPowerReader should be changed to: <b>192.168.1.4:2121</b>, i.e. append a port number to the server IP address. 
+<a href="http://www.sevenuc.com/en/uftp.html">Personal FTP Server</a>, use the uFTP Server, your FTP settings of iPowerReader should be changed to: <b>192.168.1.4:2121</b>, i.e. append a port number to the server IP address and sperate with a chracter ":", for the example, the port is 2121, then the appending string is <span class="warning">":2121"</span>. 
 </p>
 
 <p><strong>2. On Windows:</strong><br>
