--- a/en/powerreader.html
+++ b/en/powerreader.html
@@ -40,16 +40,16 @@
 </video><br>
 <p>The above video is very old, but demonstrate the app's features.</p>
 
-<p><b>iPowerReader</b> was renamed from <b>iCodeEditor</b>, it is an:<br></p>
-<ul><li><lt>Universal document manager.</lt></li>
-<li><lt>Universal document viewer.</lt></li>
-<li><lt>Universal source code editor.</lt></li>
-<li><lt>Universal multimedia player.</lt></li></ul>
+<p><b>iPowerReader</b> is a Finder-like app on iOS device, it was renamed from <b>iCodeEditor</b>, it is an:<br></p>
+<ul><li><lt>Universal file manager (File Explorer, i.e Finder on Mac).</lt></li>
+<li><lt>Universal file viewer (Reader for any kinds of files on iOS device).</lt></li>
+<li><lt>Universal source code editor (Powerful code editor designedly developed for iPad).</lt></li>
+<li><lt>Universal multimedia player (Crafted music player and video player for iPhone and iPad).</lt></li></ul>
 
 <p class="warning">It's convenient but not necessary to store everything on cloud, there is still existing many reasons to store Office documents, photo, video and other files on private disk, computer or other storage devices to prevent the data be illegally accessed, used or analysed.</p>
 
 <h2>Why</h2>
-<p>Transferring files between iPhone and MacBook always makes me very angry! Transferring files between Mac and iOS devices is always difficult and pain! You can't feel free to transfer files as convenient as moving files in Finder! So, this app developed to help you manage files in your iOS devices just like on your MacBook!</p>
+<p>Transferring files between iPhone and MacBook always makes me very angry! Transferring files between Mac and iOS devices is always difficult and pain! You can't feel free to transfer files as intuitive as moving files in Finder! So, this app developed to help you manage files in your iOS devices just like on your MacBook!</p>
 
 <h2>Fast share files between your Mac, Windows PC or Linux, Android and iOS devices</h2>
 <p><lt>iPowerReader is a Finder-like file manager on iOS device, you can transfer, delete, rename any file or folder one by one just like in Finder that completely different with translating files with iTunes that required to sync whole folder, it's more intuitive, simple, fast and feel free.</lt></p>
@@ -61,25 +61,28 @@
 <li> Fast download or upload folders that holds large number of files. All sub-folder and files will be downloaded or uploaded automatically.</li>
 <li> Efficiently organise and manage folder and files. Add, delete and rename folder or file, fast translate them between Mac, Windows PC, Linux, Android and iOS devices. The FTP Server can be running on any common platforms, Mac, Windows, Linux, Unix, Android, PSP Game box and others.</li>
 <li> Read all kinds of files on your iOS devices conveniently.</li>
-<li> Automatically generate thumbnail for image and video, and different icon for different file types, e.g. pdf, office documents, audio, web files and dozens of types of source code files.</li>
+<li> Automatically generate thumbnail for image and video, and different icon for different file types, e.g. pdf, office documents, audio, web files and any type of source code files.</li>
 </ul>
 
 <h2>Read &amp; Review code on iPad</h2>
-<p class="hilight">This function was especially designed for anyone who wants to read or edit source code on iOS device.</p>
+<p class="hilight">iPowerReader was renamed from <b>iCodeEditor</b>, means that it was originally developed to edit source code on iPad, in fact, yes, it actually a full featured code editor. This function was especially designed for anyone who wants to read or edit source code on iOS device.</p>
 <ul>
 <li> Syntax highlighting. Source code parser integrated and symbols indexed, such as module, class, function definition, variable declaration etc.</li>
 <li> Symbol browse and filter. Search symbols in folder that holds large number of files.</li>
-<li> Jump to symbol or jump to line. Accurate line location by line number or by the symbol definition.</li>
+<li> Jump to symbol or jump to line. <b>Accurate line location by line number or by the symbol definition</b>.</li>
 <li> Live web page preview. Preview website design with the builtin web browser, so convenient!</li>
-<li> Read code or other files on iPhone is convenient and useful, but edit file on iPad will feel better.</li>
+<li> Read code or other files on iPhone is convenient and useful, but edit source code file on iPad will feel better.</li>
 </ul>
 <p>The editor supports <b>Syntax Highlighting</b> for almost all popular programming languages, including but not limited:</p>
 <p class="small">Verilog, System Verilog, VHDL, MATLAB (with OO features), Asm (Assembler/Assembly language), <gr>Tcl</gr>, Ada, <gr>Fortran</gr>, Forth, Cobol, SML (Standard ML), S-Lang, Vim, <gr>LaTeX</gr>, Asciidoc, <gr>Markdown</gr>, Typescript, REXX, Flex, <gr>Lisp</gr>, Clojure, R, <gr>Rust</gr>, Haxe, OCaml (Objective Caml), Scheme, Apache, Pig, <gr>Awk</gr>, shell scripts, PowerShell, DOS batch, Basic, Asp, Pascal (Delphi/Object Pascal), Eiffel, <gr>Java</gr>, Scala, Groovy, gradle, XSLT, XSD, Xquery, WSDL, Snippets, nasl, Puppet, Sedona, Protobuf, <gr>Parrot</gr>, Myrddin, Ansible, Ant, Make, Go, Erlang, <gr>Lua</gr>, ActionScript, <gr>C</gr>, C++, Smalltalk, C#, <gr>Objective-C</gr>, Swift, PL/SQL, HTML, <gr>CSS</gr>, System css, <gr>JavaScript</gr>, CoffeeScript, Perl, <gr>PHP</gr>, Python, <gr>Ruby</gr>, Elixir, etc.</p>
 
+<p>If you want a lightweight code editor on Mac, please refer another app developed by me: <a href="speare.html">Speare code editor</a>, the free small IDE for scripting languages.</p>
+
+
 <h2>FTP Server Settings</h2>
 <p><strong>1. On Macintosh:</strong> System Preferences → Sharing → File Sharing, check the service and got the IP address of your machine, then you can input it in the settings of iPowerReader.<br><br><a href="../images/editor/ftp.png" target="_blank"><img src="../images/editor/ftp.png" alt="" class="screenshots"/></a><br><br>
 <a href="uftp.html"><img src="../images/uftp/logo.png" alt="" style="width:32px;height:auto;vertical-align: -1ex;"/></a>Because macOS High Sierra removed the builtin FTP Server, there's an alternative solution: 
-<a href="http://www.sevenuc.com/en/uftp.html">Personal FTP Server</a>, use the uFTP Server, your FTP settings of iPowerReader should be changed to: <b>192.168.1.4:2121</b>, i.e. append a port number to the server IP address and sperate with a chracter ":", for the example, the port is 2121, then the appending string is <span class="warning">":2121"</span>. 
+<a href="http://www.sevenuc.com/en/uftp.html">Personal FTP Server</a>, use the uFTP Server, your FTP settings of iPowerReader should be changed to: <b>192.168.1.4:2121</b>, i.e. append a port number to the server IP address and sperate with <b>a colon ":"</b>, for the example, the port number is 2121, then the appending string is <span class="warning">":2121"</span>, five characters. 
 </p>
 
 <p><strong>2. On Windows:</strong><br>
@@ -97,19 +100,19 @@
 <h2>Screenshots</h2>
 <div class="screenshots__">
 <p><a href="../images/editor/405.png" target="_blank"><img src="../images/editor/405.png" class="screenshots"></a></p>
-<p class="smallsection">Universal Finder-like file manager for iOS device. Fast file transfer between iOS device and Mac, Windows PC, Linux, Android phone and other platforms. <gr>You can select and apply operations on any folder and file one by one and conveniently compare files between local folder and remote folder.</gr></p>
+<p class="smallsection">Universal Finder-like file manager for iOS device. Fast file transfer between iOS device and Mac, Windows PC, Linux, Android phone and other platforms. <gr>You can select and apply operations (add, delete, translate file or folder, explore subfolders) on any folder and file one by one and intuitively compare folder content between iOS device and remote folder (e.g. FTP folder on MacBook).</gr></p>
 <p><a href="../images/editor/400.png" target="_blank"><img src="../images/editor/400.png" class="screenshots"></a></p>
 <p class="smallsection">Home panel provides entries to manage local storage on iOS device and remote files on FTP server that running on Mac, Windows, Linux, Unix, Android, Game box and others.</p>
 <p><a href="../images/editor/401.png" target="_blank"><img src="../images/editor/401.png" class="screenshots"></a></p>
 <p class="smallsection">Browse photos on iOS device by slipping finger.</p>
 <p><a href="../images/editor/402.png" target="_blank"><img src="../images/editor/402.png" class="screenshots"></a></p>
-<p class="smallsection">Universal document viewer for iOS device. Above screenshot indicate read Microsoft's PowerPoint presentations on iPad, you can read other type of documents such as WORD and EXCEL etc.</p>
+<p class="smallsection">Universal document viewer for iOS device. Above screenshot indicate read Microsoft's PowerPoint presentations on iPad, you can read any other type of documents, such as WORD, EXCEL and PDF etc.</p>
 <p><a href="../images/editor/403.png" target="_blank"><img src="../images/editor/403.png" class="screenshots"></a></p>
-<p class="smallsection">Full featured text editor for iOS device. Read, review and edit source code on iOS device.</p>
+<p class="smallsection">Full featured code editor for iOS device. Read, review and edit source code on iOS device.</p>
 <p><a href="../images/editor/404.png" target="_blank"><img src="../images/editor/404.png" class="screenshots"></a></p>
-<p class="smallsection">Full featured multimedia player for iOS device. Transfer your music or movie from other platforms and enjoy them on your iOS devices later.</p>
+<p class="smallsection">Full featured multimedia player for iOS device. Transfer your music and movie from other platforms on your iOS devices and enjoy them later.</p>
 </div>
-<p><span class="note">New </span>&nbsp;&nbsp; The builtin music player in the last updated version support playlist management, cycle loop and random playback, the player can synchronise lyrics sheet with music file. You just needs to put the lyrics sheet that has a .lrc extension together with the music file, i.e. the mp3 file and the .lrc file both must be under the same folder and has a same file name. <span><a href="http://www.sevenuc.com/en/lyricsmaker.html" target="_blank"><img src="../images/lyricsmaker/logo.png" class="smallicon" /></a></span><a href="http://www.sevenuc.com/en/lyricsmaker.html" target="_blank">LyricsMaker</a> is a small util that designed to help making lyrics sheet for music very easy.</p>
+<p><span class="note">New </span>&nbsp;&nbsp; The built-in music player in the last updated version supports lyrics synchronising, playlist management, cycle loop or random playback. The player can synchronise lyrics sheet with music files, you just needs to put the lyrics sheet that has a .lrc extension together with the music file, i.e. the mp3 file and the .lrc file both must be put under the same folder and has a same file name. <span><a href="http://www.sevenuc.com/en/lyricsmaker.html" target="_blank"><img src="../images/lyricsmaker/logo.png" class="smallicon" /></a></span><a href="http://www.sevenuc.com/en/lyricsmaker.html" target="_blank">LyricsMaker</a> is a small util that designed to help making lyrics sheet for music files very easy.</p>
 <p><br></p>
 
 
